Add description meta tags to demos.
Improving snippets in search, but more importantly when appearing in Physical
Web results for nearby devices.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Heart Rate Sensor Demo</title>
+    <meta name="description" content="Monitor a heart rate sensor with a Web Bluetooth app.">
     <link rel="icon" sizes="192x192" href="../favicon.png">
     <link rel="stylesheet" href="styles.css">
   </head>
