Update Origin Trials meta tag format (#32)

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Heart Rate Sensor Demo</title>
     <meta name="description" content="Monitor a heart rate sensor with a Web Bluetooth app.">
-    <meta name="origin-trials" content="AilW+Gn/JZF5Y9zW0oA8AatCuI4dzSb4wNKjq2/AYlaTuFiZLYA31PQADc3tjgAcms/ZwzAuXY+rd5c39vdQrQEAAABjeyJvcmlnaW4iOiAiaHR0cHM6Ly93ZWJibHVldG9vdGhjZy5naXRodWIuaW86NDQzIiwgImZlYXR1cmUiOiAiV2ViQmx1ZXRvb3RoIiwgImV4cGlyeSI6IDE0NjM3NTY2MTh9">
+    <meta http-equiv="origin-trial" content="AilW+Gn/JZF5Y9zW0oA8AatCuI4dzSb4wNKjq2/AYlaTuFiZLYA31PQADc3tjgAcms/ZwzAuXY+rd5c39vdQrQEAAABjeyJvcmlnaW4iOiAiaHR0cHM6Ly93ZWJibHVldG9vdGhjZy5naXRodWIuaW86NDQzIiwgImZlYXR1cmUiOiAiV2ViQmx1ZXRvb3RoIiwgImV4cGlyeSI6IDE0NjM3NTY2MTh9">
     <link rel="icon" sizes="192x192" href="../favicon.png">
     <link rel="stylesheet" href="styles.css">
   </head>
